# Falcon

./: .gitignore  CMakeLists.txt  README.md
doc/matlab/: decode_theta.m  encode_torque.m  forward_kinematics.m  forward_kinematics_newton_raphson.m  inverse_kinematics.m  sym_variables.m  test_forward_kinematics.m  variables.m
include/falcon/: .falcon.hpp.swo  falcon.hpp  kinematics.hpp
include/falcon/controller/: controller.hpp  pid.hpp  test.hpp
src/: CMakeLists.txt  main  main.cpp
src/falcon/: falcon.cpp  falcon.h  kinematics.cpp
src/falcon/controller/: controller.cpp  pid.cpp  test.cpp
src/haptic/: haptic.cpp
