# OBTAIN ALL SOURCE FILES
FILE(GLOB_RECURSE SRC_FILES *.cpp)

# ENTER SOURCE DIRECTORY
ADD_EXECUTABLE(falcon ${SRC_FILES})
SET_TARGET_PROPERTIES(falcon PROPERTIES OUTPUT_NAME falcon${BUILD_POSTFIX})
TARGET_LINK_LIBRARIES(falcon ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(falcon ${LIBNIFALCON_LIBRARIES})
